@@ -1,3 +1,9 @@
+2011-07-02  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* pthread_spin_unlock.c (EPERM): Return success if unlocking a lock
+	that is not locked, because single CPU machines wrap a
+	PTHREAD_MUTEX_NORMAL mutex, which returns success in this case.
+
 2011-07-02 Daniel Richard G. <skunk at iskunk dot org>
 
 	* Makefile: Cleanups and implovements.
